1.3.10 - Quick fix for blurred images (again)

--- a/twitter/twitter-tweaks.user.css
+++ b/twitter/twitter-tweaks.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name           Twitter Tweaks by @FreeplayG
-@version        1.3.9
+@version        1.3.10
 @description    Uncrop images, hide trends, Avatar roundness, move header aside, and more!!
 @updateURL      https://codeberg.org/Freeplay/UserStyles/raw/branch/main/twitter/twitter-tweaks.user.css
 @preprocessor   stylus
@@ -60,8 +60,8 @@
 
 
 ==/UserStyle== */
-/* Update 1.3.8
-- MORE NOTICEABLE REPLY MENTION SELECTION THING DAMNIT
+/* Update 1.3.10
+- Quick fix for blurred images (again)
 */
 @-moz-document domain("twitter.com") {
 	
@@ -151,7 +151,8 @@
 						opacity: .9;
 					}
 					img {
-						object-fit: contain;
+						object-fit: contain !important;
+						opacity: 1;
 					}
 				}
 			}
